<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.campaigns.CampaignsAddFragment"
    android:layout_marginBottom="60dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_frag_campg_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margen_ll"
            android:layout_marginRight="@dimen/margen_ll"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_frag_ev_add_logo"
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/icono2" />

            <EditText
                android:id="@+id/et_frag_ev_add_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_frag_ev_add_nom"
                android:backgroundTint="@color/color_componentes_reg"
                android:textColorHint="@color/color_hint_reg"/>

            <EditText
                android:id="@+id/et_frag_ev_add_obj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_frag_camp_add_obj"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/color_componentes_reg"
                android:textColorHint="@color/color_hint_reg"/>

            <EditText
                android:id="@+id/et_frag_ev_add_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_frag_camp_add_fecha"
                android:inputType="text"
                android:backgroundTint="@color/color_componentes_reg"
                android:textColorHint="@color/color_hint_reg"/>

            <EditText
                android:id="@+id/et_frag_ev_add_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_frag_camp_add_lugar"
                android:backgroundTint="@color/color_componentes_reg"
                android:textColorHint="@color/color_hint_reg"/>

            <TextView
                android:id="@+id/tv_frag_ev_add_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_frag_camp_add_imagen"
                android:textSize="18sp"
                android:textColor="@color/purple_500"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margen_int"/>

            <ImageView
                android:id="@+id/iv_frag_ev_add_imagen"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margen_ll"
                android:tooltipText="@string/tt_frag_camp_add_imagen"
                android:clickable="true" />

            <LinearLayout
                android:id="@+id/ll_frag_ev_add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margen_int">

                <Button
                    android:id="@+id/btn_frag_ev_add_cancelar"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/btn_frag_camp_add_cancelar"
                    android:backgroundTint="@color/blue"
                    android:layout_weight="0.7"
                    android:layout_marginRight="@dimen/margen_right"
                    />

                <Button
                    android:id="@+id/btn_frag_ev_add_aceptar"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/btn_frag_camp_add_aceptar"
                    android:layout_marginRight="@dimen/margen_right"
                    android:layout_weight="0.7"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>