<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen_act_log"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivActLogin"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono2" />

    <EditText
        android:id="@+id/etActLogUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_et_act_log_user"
        android:backgroundTint="#0783E1"
        android:textColorHint="#66000000"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivActLogin"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etActLogPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_et_act_log_pass"
        android:backgroundTint="#0783E1"
        android:textColorHint="#66000000"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etActLogUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/btnActLogAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_act_log_acceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etActLogPass" />

    <TextView
        android:id="@+id/tvActLogRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_act_log_register"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/color_tv_act_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnActLogAcceder" />

    <TextView
        android:id="@+id/tvActLogInvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_act_log_invitado"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/color_tv_act_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActLogRegister" />

    <FrameLayout
        android:id="@+id/fLActLoginContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>